# genai-arcade-microservices

./: README.md
.github/workflows/: deploy-frontend.yaml  deploy-to-hf.yaml
frontend/: DESIGN.md  README.md  package-lock.json  package.json  skills-lock.json  svelte.config.js
frontend/src/lib/: navigation.ts  utils.ts  widgets-api.ts
frontend/src/lib/data/: arcade.ts
frontend/src/routes/: +layout.svelte  layout.css
widgets-api/linkedin-generator/: README.md  app.py  config.py  gateway.py  gateway_wrapper.py  openapi-python-client.yaml  requirements.txt  service.py  space.yaml
widgets-api/linkedin-generator/inference_gateway_client/: README.md  pyproject.toml
widgets-api/linkedin-generator/inference_gateway_client/inference_gateway_client/: __init__.py
widgets-api/linkedin-generator/inference_gateway_client/inference_gateway_client/api/default/: get_health.py  post_generate_chat.py
widgets-api/linkedin-generator/inference_gateway_client/inference_gateway_client/models/: __init__.py  get_health_response_200.py  get_health_response_200_status.py  post_generate_chat_body.py  post_generate_chat_body_messages_item.py  post_generate_chat_body_messages_item_role.py  post_generate_chat_body_model.py  post_generate_chat_response_200.py
widgets-api/llm-calculator/: app.py  gateway_wrapper.py  requirements.txt  service.py  space.yaml
widgets-api/model-gateway/: README.md  app.py  requirements.txt  service.py  space.yaml
widgets-api/model-gateway/models/: __init__.py  config.py  gemma4_e2b.py  lazy_model.py  llama.py  llama3_2_3b_instruct.py
(+45 files in other folders)
